--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -12,8 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 
-   <style>
- .logo {
+    <style>
+        .logo {
             line-height: 60px;
             float: left;
             margin: 16px 46px;
@@ -24,35 +24,39 @@
         }
 
         .sb-sidenav-dark .sb-sidenav-menu .nav-link {
-    color: white;
-}
+            color: white;
+        }
 
-.bg-dark {
-    background-color: black;
-}
-   </style>
+        .bg-dark {
+            background-color: black;
+        }
+    </style>
 </head>
-  <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+<body class="sb-nav-fixed">
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
- <div class="logo" >
-     <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
-        </div>
-          
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
-        <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
-          <button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
-           Log out
-        </button>
-        </div>
-        </nav>
+    <div class="logo">
+        <a href="http://localhost:8888/Index"><img style="float: left; margin-right: 1%;" src="/img/pikto.png"
+                                                   width="100"/></a>
+    </div>
+    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i
+            class="fas fa-bars"></i></button>
+    <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
+        <a href="http://localhost:8888/logout">
+            <button type="button" class="btn btn-default btn-sm"
+                    style="color:black; background-color:white; margin-right:1.5em;">Logout
+            </button>
+        </a>
+    </div>
+</nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
 
                 <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive"
+                         style="display:block; margin: 0 auto; padding-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
@@ -61,7 +65,7 @@
                     <div class="profile-userbuttons">
                     </div>
                     <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
-                     
+
                     </div>
                     <div class="nav">
                         <a class="nav-link" href="http://localhost:8888/Admin">
@@ -85,18 +89,20 @@
                             Reviews
                         </a>
                     </div>
-                   
-                </div>
-               <div class="sb-sidenav-footer">
-                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
 
-                    </div>
+                </div>
+                <div class="sb-sidenav-footer">
+                    <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog"
+                                                                                           style="margin-right:5px"></i>Settings
+                    </p>
+
+                </div>
             </div>
         </nav>
     </div>
 
 
-       <div id="layoutSidenav_content">
+    <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
                 <h1 class="mt-4">Products</h1>
@@ -141,7 +147,8 @@
                                 <tbody>
                                 {{#allProducts}}
                                 <tr>
-                                    <td><img src="{{productUrl}}" style="object-fit:cover;" alt="Girl in a jacket" width="100" height="100"></td>
+                                    <td><img src="{{productUrl}}" style="object-fit:cover;" alt="Girl in a jacket"
+                                             width="100" height="100"></td>
                                     <td>{{productId}}</td>
                                     <td>{{userId}}</td>
                                     <td>{{title}}</td>
@@ -150,7 +157,7 @@
                                     <td>{{price}}</td>
                                     <td class="hide">{{discount}}</td>
                                     <td>{{publishedAt}}</td>
-                                   <td class="hide">{{content}}</td>
+                                    <td class="hide">{{content}}</td>
                                     <td class="hide">{{productUrl}}</td>
                                 </tr>
                                 {{/allProducts}}
@@ -249,7 +256,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
-                        <a id="deletebtn" class="btn btn-danger">Delete Event</a>
+                        <a id="deletebtn" class="btn btn-danger">Delete Product</a>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </form>
@@ -258,8 +265,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 <div class="modal" tabindex="-1" role="dialog" id="editModal">
@@ -273,28 +278,32 @@
             </div>
             <div class="modal-body" id="modalBody">
                 <form method="POST" action="/Admin/updateUser" novalidate>
-                   <div class="form-group row">
+                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
-                            <input id="userId" name="userId" type="text" class="form-control" value="{{userData.userId}}" readonly>
+                            <input id="userId" name="userId" type="text" class="form-control"
+                                   value="{{userData.userId}}" readonly>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">Firstname</label>
                         <div class="col-8">
-                            <input id="Firstname" name="firstName" type="text" class="form-control" value="{{userData.firstName}}">
+                            <input id="Firstname" name="firstName" type="text" class="form-control"
+                                   value="{{userData.firstName}}">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="summary" class="col-4 col-form-label">Lastname</label>
                         <div class="col-8">
-                            <input id="Lastname" name="lastName" type="text" class="form-control" value="{{userData.lastName}}">
+                            <input id="Lastname" name="lastName" type="text" class="form-control"
+                                   value="{{userData.lastName}}">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="mobileNr" class="col-4 col-form-label">Phonenumber</label>
                         <div class="col-8">
-                            <input id="mobileNr" name="mobileNr" type="text" class="form-control" value="{{userData.mobileNr}}">
+                            <input id="mobileNr" name="mobileNr" type="text" class="form-control"
+                                   value="{{userData.mobileNr}}">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -306,7 +315,8 @@
                     <div class="form-group row">
                         <label for="pictureUrl" class="col-4 col-form-label">Profilepicture</label>
                         <div class="col-8">
-                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control" value="{{userData.pictureUrl}}">
+                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control"
+                                   value="{{userData.pictureUrl}}">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -315,23 +325,23 @@
                 </form>
             </div>
 
-   <div style="background-color:black; width:100%; height:0.7em;">
-                     
-                    </div>
-              <div class="modal-header">
+            <div style="background-color:black; width:100%; height:0.7em;">
+
+            </div>
+            <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
             </div>
             <div class="modal-body" id="modalBody">
                 <form method="POST" action="/Admin/NewPassword" novalidate>
 
-                  <div class="form-group row" style="display:none;">
+                    <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
                             <input id="userId" name="username" type="password" class="form-control">
                         </div>
                     </div>
 
-                   <div class="form-group row">
+                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">Old password</label>
                         <div class="col-8">
                             <input id="userId" name="oldpassword" type="password" class="form-control">
@@ -342,20 +352,17 @@
                         <div class="col-8">
                             <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>      
+                    </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
                 </form>
             </div>
 
-            
 
         </div>
     </div>
 </div>
-
-
 
 
 <div class="modal" tabindex="-1" role="dialog" id="productsModal">
@@ -390,7 +397,8 @@
                     <div class="form-group row">
                         <label for="rating" class="col-4 col-form-label">Rating</label>
                         <div class="col-8">
-                            <input id="rating" name="rating" type="number" class="form-control" required min="1" max="5" placeholder="max rating 5">
+                            <input id="rating" name="rating" type="number" class="form-control" required min="1" max="5"
+                                   placeholder="max rating 5">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -406,7 +414,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="userId" class="col-4 col-form-label">User id</label >
+                        <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
                             <input id="userId" name="userId" type="number" class="form-control" readonly>
                         </div>
@@ -423,40 +431,33 @@
 </div>
 
 
-
-
-    </div>
-
-
-
-
+</div>
 
 
 </div>
 <script>
 
-  
 
     // Toggle the side navigation
-    function clicked(){
+    function clicked() {
 
-          var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
-        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function() {
+        var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
+        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function () {
             if (this.href === path) {
                 $(this).addClass("active");
             }
         });
 
 
-
-      $("body").toggleClass("sb-sidenav-toggled");
+        $("body").toggleClass("sb-sidenav-toggled");
 
     }
-    
+
 </script>
 
 <script src="/js/Admin/jquery.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
 <!--<script src="/js/Admin/scripts.js"></script>-->
 <script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
