--- a/src/main/resources/templates/Frontend/User/Purchases.mustache
+++ b/src/main/resources/templates/Frontend/User/Purchases.mustache
@@ -14,7 +14,7 @@
           crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
-               <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -24,14 +24,15 @@
     <link rel="stylesheet" href="/css/Main/media-queries.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-            
-   <style>
-   .modal-open .modal {
-    overflow-x: hidden;
-    overflow-y: auto;
-    margin-left: 4%;
-}
- .logo {
+
+    <style>
+        .modal-open .modal {
+            overflow-x: hidden;
+            overflow-y: auto;
+            margin-left: 4%;
+        }
+
+        .logo {
             line-height: 60px;
             float: left;
             margin: 16px 46px;
@@ -42,40 +43,47 @@
         }
 
         .sb-sidenav-dark .sb-sidenav-menu .nav-link {
-    color: white;
-}
+            color: white;
+        }
 
-.bg-dark {
-    background-color: black !important;
-}
-.card-columns {
-    column-count: 1;
-}
-   </style>
+        .bg-dark {
+            background-color: black !important;
+        }
+
+        .card-columns {
+            column-count: 1;
+        }
+    </style>
 </head>
-  <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+<body class="sb-nav-fixed">
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
- <div class="logo" >
-     <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
-        </div>
-          
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
-        <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
-          <a href="http://localhost:8888/login?logout"><button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
-           Log out
-        </button></a>
-        </div>
-        </nav>
-    <!-- Navbar-->
- 
+    <div class="logo">
+        <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png"
+                                                    width="100"/></a>
+    </div>
+
+    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i
+            class="fas fa-bars"></i></button>
+    <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
+        <a href="http://localhost:8888/login?logout">
+            <button type="button" class="btn btn-default btn-sm"
+                    style="color:black; background-color:white; margin-right:1.5em;">
+                Log out
+            </button>
+        </a>
+    </div>
+</nav>
+<!-- Navbar-->
+
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-               <div class="sb-sidenav-menu">
+            <div class="sb-sidenav-menu">
 
                 <div class="profile-userpic">
-                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; margin-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive"
+                         style="display:block; margin: 0 auto; margin-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
@@ -84,7 +92,7 @@
                     <div class="profile-userbuttons">
                     </div>
                     <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
-                     
+
                     </div>
                     <div class="nav">
                         <a class="nav-link" href="http://localhost:8888/User">
@@ -101,46 +109,47 @@
                         </a>
                     </div>
                 </div>
-               <div class="sb-sidenav-footer">
-                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
+                <div class="sb-sidenav-footer">
+                    <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog"
+                                                                                           style="margin-right:5px"></i>Settings
+                    </p>
 
-                    </div>
+                </div>
 
             </div>
         </nav>
     </div>
-      </div>
-    <div id="layoutSidenav_content">
-<div class="container" style="margin-top: 5%; margin-left: 28%;">
-<div class="row">
-        <div class="card-columns">
-            {{#userOrders}}
-            <div class="card">
-           <h4 class="card-title" style="color:black; display:none;">{{title}}</h4>
-            <h6  style="display:none;" id="idProduct">{{productId}}</h6>
-                <div class="card-body">
+</div>
+<div id="layoutSidenav_content">
+    <div class="container" style="margin-top: 5%; margin-left: 28%;">
+        <div class="row">
+            <div class="card-columns">
+                {{#userOrders}}
+                <div class="card">
+                    <h4 class="card-title" style="color:black; display:none;">{{title}}</h4>
+                    <h6 style="display:none;" id="idProduct">{{productId}}</h6>
+                    <div class="card-body">
                         <img src="{{productUrl}}" alt="Italian Trulli">
+                    </div>
+                    <div class="card-footer">
+                        <a href="{{productUrl}}" download>
+
+                            <button type="button" class="btn btn-info"><i class="fa fa-download"></i>Download</button>
+                        </a>
+
+                        <button type="button" class="btn btn-success" data-toggle="modal" id="toggleModal"
+                                data-target="#addReview">Review
+                        </button>
+                    </div>
                 </div>
-                <div class="card-footer">
-                <a href="{{productUrl}}" download>
-
-                <button type="button" class="btn btn-info"><i class="fa fa-download"></i>Download</button>
-                 </a>
-
-                <button type="button" class="btn btn-success" data-toggle="modal"  id="toggleModal" data-target="#addReview">Review</button>
-
-
-
-                </div>
+                {{/userOrders}}
             </div>
-            {{/userOrders}}
         </div>
+
+    </div>
+
 </div>
 
-            </div>
-        
-     </div>
-    
 <div class="modal" tabindex="-1" role="dialog" id="editModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -152,28 +161,32 @@
             </div>
             <div class="modal-body" id="modalBody">
                 <form method="POST" action="/Admin/updateUser" novalidate>
-                   <div class="form-group row">
+                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
-                            <input id="userId" name="userId" type="text" class="form-control" value="{{userData.userId}}" readonly>
+                            <input id="userId" name="userId" type="text" class="form-control"
+                                   value="{{userData.userId}}" readonly>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">Firstname</label>
                         <div class="col-8">
-                            <input id="Firstname" name="firstName" type="text" class="form-control" value="{{userData.firstName}}">
+                            <input id="Firstname" name="firstName" type="text" class="form-control"
+                                   value="{{userData.firstName}}">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="summary" class="col-4 col-form-label">Lastname</label>
                         <div class="col-8">
-                            <input id="Lastname" name="lastName" type="text" class="form-control" value="{{userData.lastName}}">
+                            <input id="Lastname" name="lastName" type="text" class="form-control"
+                                   value="{{userData.lastName}}">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="mobileNr" class="col-4 col-form-label">Phonenumber</label>
                         <div class="col-8">
-                            <input id="mobileNr" name="mobileNr" type="text" class="form-control" value="{{userData.mobileNr}}">
+                            <input id="mobileNr" name="mobileNr" type="text" class="form-control"
+                                   value="{{userData.mobileNr}}">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -185,7 +198,8 @@
                     <div class="form-group row">
                         <label for="pictureUrl" class="col-4 col-form-label">Profilepicture</label>
                         <div class="col-8">
-                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control" value="{{userData.pictureUrl}}">
+                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control"
+                                   value="{{userData.pictureUrl}}">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -194,23 +208,23 @@
                 </form>
             </div>
 
-   <div style="background-color:black; width:100%; height:0.7em;">
-                     
-                    </div>
-             <div class="modal-header">
+            <div style="background-color:black; width:100%; height:0.7em;">
+
+            </div>
+            <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
             </div>
             <div class="modal-body" id="modalBody">
                 <form method="POST" action="/User/NewPassword" novalidate>
 
-                  <div class="form-group row" style="display:none;">
+                    <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
                             <input id="userId" name="username" type="password" class="form-control">
                         </div>
                     </div>
 
-                   <div class="form-group row">
+                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">Old password</label>
                         <div class="col-8">
                             <input id="userId" name="oldpassword" type="password" class="form-control">
@@ -221,15 +235,15 @@
                         <div class="col-8">
                             <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>      
+                    </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
                 </form>
             </div>
 
-</div>
-</div>
+        </div>
+    </div>
 </div>
 
 
@@ -245,43 +259,42 @@
             <div class="modal-body" id="reviewModalBody">
                 <form method="POST" action="/User/addReview" novalidate>
                     <div class="form-group row" style="display:none;">
-                        <label for="productId">Product id</label>
-                       
-                            <input id="r_productId" name="productId" type="text" class="form-control" hidden>
-    
+                        <label for="r_productId">Product id</label>
+                        <input id="r_productId" name="productId" type="text" class="form-control" hidden
+                               value="{{prod}}">
                     </div>
                     <div class="form-group row">
                         <label for="r_title">Title</label>
-                            <input id="r_title" name="title" type="text" class="form-control">
+                        <input id="r_title" name="title" type="text" class="form-control">
                     </div>
 
-                     <div class="form-group row">
-                       <label for="r_title">Rating</label>
-                         <select class="form-control" id="Rating" name="rating">
-                        <option value="1">1</option>
-                          <option value="2">2</option>
-                           <option value="3">3</option>
+                    <div class="form-group row">
+                        <label for="r_title">Rating</label>
+                        <select class="form-control" id="Rating" name="rating">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
                             <option value="4">4</option>
-                             <option value="5">5</option>
-                    
-                         </select>
-                                                                           
-                            </div>
+                            <option value="5">5</option>
+                        </select>
+
+                    </div>
                     <div class="form-group row" style="display:none;">
                         <label for="r_createdAt">Created At</label>
-                      
-                            <input id="r_createdAt" name="createdAt" type="text" class="form-control" >
-                   
+
+                        <input id="r_createdAt" name="createdAt" type="text" class="form-control">
+
                     </div>
                     <div class="form-group row">
-                        <label for="r_content" >Review text</label>
-                       
-                            <input id="r_content" name="content" type="text" class="form-control">
+                        <label for="r_content">Review text</label>
+
+                        <input id="r_content" name="content" type="text" class="form-control">
                     </div>
                     <div class="form-group row" style="display:none;">
-                        <label for="r_userId" >User id</label >
-                       
-                            <input id="r_userId" name="userId" type="number" value="{{userData.userId}}"class="form-control" >
+                        <label for="r_userId">User id</label>
+
+                        <input id="r_userId" name="userId" type="number" value="{{userData.userId}}"
+                               class="form-control">
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
@@ -292,12 +305,7 @@
         </div>
     </div>
 
-        </div>
-
-
-
-
-
+</div>
 
 
 </div>
@@ -314,23 +322,23 @@
 <script src="/js/Admin/datatables-demo.js"></script>
 
 <script>
-     $("#toggleModal").click(function () { 
-            var id = $("#idProduct").text(); 
-            alert(id);
-            $("#r_productId").val(id); 
-        }); 
-         function clicked(){
+    $("#toggleModal").click(function () {
+        var id = $("#idProduct").text();
+        alert(id);
+        $("#r_productId").val(id);
+    });
 
-          var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
-        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function() {
+    function clicked() {
+
+        var path = window.location.href; // because the 'href' property of the DOM element is the absolute path
+        $("#layoutSidenav_nav .sb-sidenav a.nav-link").each(function () {
             if (this.href === path) {
                 $(this).addClass("active");
             }
         });
 
 
-
-      $("body").toggleClass("sb-sidenav-toggled");
+        $("body").toggleClass("sb-sidenav-toggled");
 
     }
 </script>
